// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownToggle renders correctly with Text inside 1`] = `
<div
  className="wds-dropdown__toggle"
>
  <span>
    Content
  </span>
  <svg
    className="wds-icon wds-icon wds-icon-tiny wds-dropdown__toggle-chevron wds-icon-tiny"
  >
    <use
      xlinkHref="#wds-icons-menu-control-tiny"
    />
  </svg>
</div>
`;

exports[`DropdownToggle renders correctly with a component inside 1`] = `
<div
  className="wds-dropdown__toggle"
>
  <span>
    <span>
      Content
    </span>
  </span>
  <svg
    className="wds-icon wds-icon wds-icon-tiny wds-dropdown__toggle-chevron wds-icon-tiny"
  >
    <use
      xlinkHref="#wds-icons-menu-control-tiny"
    />
  </svg>
</div>
`;

exports[`DropdownToggle renders correctly with default values 1`] = `
<div
  className="wds-dropdown__toggle"
>
  <span />
  <svg
    className="wds-icon wds-icon wds-icon-tiny wds-dropdown__toggle-chevron wds-icon-tiny"
  >
    <use
      xlinkHref="#wds-icons-menu-control-tiny"
    />
  </svg>
</div>
`;
